<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/head"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".src.main.home.HomeFragment">

    <ImageButton
        android:id="@+id/home_imgbtn_acc2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:contentDescription="@string/home_acc"

        android:scaleType="centerInside"
        android:src="@drawable/home_acc_cat"
        tools:src="@drawable/home_acc_cat" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="패션잡화"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/home_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="찾고싶은 상품을 검색해보세요"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Small"
        app:titleTextColor="@color/bunjang_dark_gray" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/home_refreshlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
                tools:context=".src.main.home.HomeFragment">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/home_viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </androidx.viewpager2.widget.ViewPager2>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/home_imgbtn_womancloth"
                            android:layout_width="40dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="#FFFFFF"
                            android:contentDescription="@string/home_womancloth"
                            android:scaleType="centerInside"
                            android:src="@drawable/home_womancloth_cat"
                            tools:src="@drawable/home_womancloth_cat" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="여성의류"
                            android:textColor="@color/black"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/home_imgbtn_acc"
                            android:layout_width="40dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="#FFFFFF"
                            android:contentDescription="@string/home_acc"

                            android:scaleType="centerInside"
                            android:src="@drawable/home_acc_cat"
                            tools:src="@drawable/home_acc_cat" />

                        <TextView
                            android:id="@+id/textView48"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="패션잡화"
                            android:textColor="@color/black"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/home_imgbtn_acc4"
                            android:layout_width="40dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="#FFFFFF"
                            android:contentDescription="@string/home_acc"

                            android:scaleType="centerInside"
                            android:src="@drawable/home_digital_cat"
                            tools:src="@drawable/home_digital_cat" />

                        <TextView
                            android:id="@+id/textView78"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="디지털/가전"
                            android:textColor="@color/black"
                            android:textSize="12sp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/home_imgbtn_sise"
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="#FFFFFF"

                            android:contentDescription="@string/home_sise"
                            android:scaleType="centerInside"
                            android:src="@drawable/home_sise"
                            tools:src="@drawable/home_sise" />

                        <TextView
                            android:id="@+id/textView54"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="내폰시세"
                            android:textColor="@color/black"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/home_imgbtn_allcat"
                            android:layout_width="40dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="#FFFFFF"
                            android:contentDescription="@string/home_allcat"

                            android:scaleType="centerInside"
                            android:src="@drawable/home_all_cat"
                            tools:src="@drawable/home_all_cat" />

                        <TextView
                            android:id="@+id/textView55"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="전체보기"
                            android:textColor="@color/black" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/textView44"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="8dp"
                    android:text="오늘의 상품 추천"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/todayrecommendrecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView44" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>